src/objects/Case_Type_with_Roles__mdt.object
<CustomObject>
    <fields>
        <fullName>CaseType__c</fullName>
        <label>CaseType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Id__c</fullName>
        <label>Plan Id</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IL1</fullName>
                    <default>true</default>
                    <label>IL1</label>
                </value>
                <value>
                    <fullName>OK1</fullName>
                </value>
                <value>
                    <fullName>NM1</fullName>
                </value>
                <value>
                    <fullName>MT1</fullName>
                </value>
                <value>
                    <fullName>TX1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Developer_Name__c</fullName>
        <description>All developer names should be separated with ;
Use below Query to get role Developer Names. 
&apos;SELECT DeveloperName,Id,Name FROM UserRole&apos;</description>
        <label>Role Developer Name</label>
        <type>TextArea</type>
    </fields>
    <label>Case Type with Roles</label>
    <pluralLabel>Case Type with Roles</pluralLabel>
</CustomObject>